Restruturação BackEnd
