# test-backend/app/Http/Requests/PropertyOwnerRequest.php
@@ -1,31 +1,0 @@
-<?php
-
-namespace App\Http\Requests;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-class PropertyOwnerRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        $id = request()->segment(count(request()->segments()));
-        return [
-            'email_owner' => "required|email|unique:property_owners,email_owner,{$id},id"
-        ];
-    }
-}
