# test-backend/routes/api.php
@@ -1,7 +1,7 @@
 <?php
 
 Route::group(['namespace' => 'api'], function () {
-    Route::apiResource('dono-propriedade', 'PropertyOwnerController');
+    Route::get('propriedades-contratos/{id}', 'PropertyController@contract');
     Route::apiResource('propriedades', 'PropertyController');
     Route::apiResource('contratos', 'ContractController');
 });
